# api-docs.yaml
@@ -4,23 +4,23 @@ info:
   description: The API for the Visum music web project
   version: v2
 servers:
-- url: http://localhost:8080/
-  description: This is the sample api doc
+  - url: http://localhost:8080/
+    description: This is the sample api doc
 security:
-- bearer-jwt:
-  - read
-  - write
+  - bearer-jwt:
+      - read
+      - write
 paths:
   /auth/login:
     post:
       tags:
-      - user-controller
+        - user-controller
       operationId: login
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/LoginRequestDTO'
+              $ref: "#/components/schemas/LoginRequestDTO"
         required: true
       responses:
         "200":
@@ -28,17 +28,17 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ApiResponseLoginResponseDTO'
+                $ref: "#/components/schemas/ApiResponseLoginResponseDTO"
   /auth/sign-up:
     post:
       tags:
-      - register
+        - user-controller
       operationId: register
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UserDTO'
+              $ref: "#/components/schemas/UserDTO"
         required: true
       responses:
         "200":
@@ -46,25 +46,49 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ApiResponseUserDTO'
+                $ref: "#/components/schemas/ApiResponseUserDTO"
+  /visum/user:
+    get:
+      tags:
+        - user-controller
+      operationId: getCurrentUser
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ApiResponseUserDTO"
+  /visum/genres:
+    get:
+      tags: 
+        - genre-controller
+      operationId: getGenre
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiResponseGenreDTO'
 components:
   schemas:
     UserDTO:
       required:
-      - birthOfDate
-      - email
-      - firstName
-      - gender
-      - lastName
-      - mobile
-      - password
-      - username
+        - birthOfDate
+        - email
+        - firstName
+        - gender
+        - lastName
+        - mobile
+        - password
+        - userName
       type: object
       properties:
         id:
           type: integer
           format: int64
-        username:
+        userName:
           type: string
         gender:
           type: string
@@ -91,7 +115,7 @@ components:
       type: object
       properties:
         result:
-          $ref: '#/components/schemas/UserDTO'
+          $ref: "#/components/schemas/UserDTO"
         errorCode:
           type: string
         message:
@@ -101,8 +125,8 @@ components:
           format: int32
     LoginRequestDTO:
       required:
-      - password
-      - userName
+        - password
+        - userName
       type: object
       properties:
         userName:
@@ -113,7 +137,7 @@ components:
       type: object
       properties:
         result:
-          $ref: '#/components/schemas/LoginResponseDTO'
+          $ref: "#/components/schemas/LoginResponseDTO"
         errorCode:
           type: string
         message:
@@ -123,11 +147,34 @@ components:
           format: int32
     LoginResponseDTO:
       required:
-      - token
+        - token
       type: object
       properties:
         token:
           type: string
+    ApiResponseGenreDTO:
+      type: object
+      properties:
+        result:
+          type: array
+          items:
+            $ref: "#/components/schemas/GenreDTO"
+        errorCode:
+          type: string
+        message: 
+          type: object
+        responseCode:
+          type: integer
+          format: int32
+    GenreDTO:
+      type: object
+      properties:
+        genre:
+          type: string
+        category:
+          type: array
+          items:
+            type: string
   securitySchemes:
     bearer-jwt:
       type: http
