# src/app/api-svc/model/models.ts
@@ -1,5 +1,7 @@
+export * from './apiResponseGenreDTO';
 export * from './apiResponseLoginResponseDTO';
 export * from './apiResponseUserDTO';
+export * from './genreDTO';
 export * from './loginRequestDTO';
 export * from './loginResponseDTO';
 export * from './userDTO';
